# Spath

./: .gitignore  README.md  example_prompt.txt  sft-curriculum-icl.sh  sft-hidden-rule-max-edge-weight-training-avoid-eval-256tokens.sh  sft-hidden-rule-three-rules-training-avoid-eval-256tokens.sh  sft-hidden-rule-three-rules-training-avoid-eval-train3to9-test6-0shot-4shot-6shot-256tokens.sh  sft-hidden-rule-three-rules-training-avoid-eval-train3to9-test6-256tokens.sh  sft-hidden-rule-three-rules-training-avoid-eval-train3to9-test6-variable-shot-256tokens.sh  sft-icl-shuffled.sh  sft-len.sh  sft-true-icl-avoid-024shot-size10-only-256tokens.sh  sft-true-icl-avoid-024shot-size6-only-256tokens.sh  sft-true-icl-same-parity-024shot-size6-only-256tokens.sh  sft-true-icl-same-parity-024shot-train3to9-test6-mixed-training-256tokens.sh  sft-true-icl-set-target-024shot-size6-only-256tokens.sh  sft.sh  sft_curriculum.sh  spath-env.yaml  unsloth-cli-aaryan.py  unsloth-cli-curriculum-icl.py  unsloth-cli-hidden-rule-max-edge-weight-training-avoid-eval-256tokens.py  unsloth-cli-hidden-rule-three-rules-training-avoid-eval-256tokens.py  unsloth-cli-hidden-rule-three-rules-training-avoid-eval-train3to9-test6-0shot-4shot-6shot-256tokens.py  unsloth-cli-hidden-rule-three-rules-training-avoid-eval-train3to9-test6-variable-shot-256tokens.py  unsloth-cli-kevin.py  unsloth-cli-true-icl-avoid-024shot-size10-only-256tokens.py  unsloth-cli-true-icl-avoid-024shot-size6-only-256tokens.py  unsloth-cli-true-icl-same-parity-024shot-size6-only-256tokens.py  unsloth-cli.py  (+2 more)
spath_data_gen_rust/: Cargo.toml  (+2 more)
(+43 files in other folders)
