[package]
name = "spath_data_gen_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "spath_data_gen_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize", "extension-module"] }
rand = { version = "0.8", features = ["std_rng"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

